Updated research page with Lelantus Spark - Removed Dandelion

--- a/about/research/index.html
+++ b/about/research/index.html
@@ -23,6 +23,40 @@ permalink: /about/research/index.html
             <div class="container">
               <div class="row">
                   <div class="col head">
+                        <h2>lelantus spark</h2>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col tech">
+                      <div class="row">
+                          <div class="col">
+                              <h3>{% t tech.sparklelantus1 %}</h3>
+                              <p>{% t tech.sparklelantus2 %}</p>
+                          </div>
+                          <div class="col">
+                              <img src="/img/lelantus-spark.svg" alt=""/>
+                          </div>
+                      </div>
+                      <div class="row">
+                          <div class="col">
+                              <h3>{% t tech.academicpapers %}</h3>
+                              <div class="row papers">
+                                  <div class="col">
+                                      <a href="https://eprint.iacr.org/2021/1173" alt="" class="paper-title">Lelantus Spark: Secure and Flexible Private Transactions</a>
+                                      <p class="abstract">We propose a modification to the Lelantus private transaction protocol to provide recipient privacy, improved security, and additional usability features. Our decentralized anonymous payment (DAP) construction, Spark, enables non-interactive one-time addressing to hide recipient addresses in transactions. The modified address format permits flexibility in transaction visibility. Address owners can securely provide third parties with opt-in visibility into incoming transactions or all transactions associated to the address; this functionality allows for offloading chain scanning and balance computation without delegating spend authority. It is also possible to delegate expensive proving operations without compromising spend authority when generating transactions. Further, the design is compatible with straightforward linear multisignature operations to allow mutually non-trusting parties to cooperatively receive and generate transactions associated to a multisignature address. We prove that Spark satisfies formal DAP security properties of balance, non-malleability, and ledger indistinguishability.</p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
+      
+      <section class="tech-section">
+            <div class="container">
+              <div class="row">
+                  <div class="col head">
                         <h2>lelantus</h2>
                   </div>
               </div>
@@ -34,7 +68,7 @@ permalink: /about/research/index.html
                               <p>{% t tech.lelantus2 %}</p>
                           </div>
                           <div class="col">
-                              <img src="/img/lelantus.svg" alt=""/>
+                              <img src="/img/lelantus-upd.svg" alt=""/>
                           </div>
                       </div>
                       <div class="row">
@@ -86,7 +120,7 @@ permalink: /about/research/index.html
 
                           </div>
                           <div class="col">
-                              <img src="/img/sigma.svg" alt=""/>
+                              <img src="/img/sigma-upd.svg" alt=""/>
                           </div>
                       </div>
                       <div class="row">
@@ -96,40 +130,6 @@ permalink: /about/research/index.html
                                   <div class="col">
                                       <a href="https://eprint.iacr.org/2014/764.pdf" alt="" class="paper-title">One-out-of-Many Proofs: Or How to Leak a Secret and Spend a Coin (Jens Groth et al)</a>
                                       <p class="abstract">One out of Many Proofs forms the foundation of Sigma which improves on Zerocoin by removing trusted setup and reducing proof sizes. Firo is also applying some further efficiency modifications to the original paper. Sigma is in development and is slated to be released in Q1 2019.</p>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </section>
-      
-      <section class="tech-section">
-            <div class="container">
-              <div class="row">
-                  <div class="col head">
-                        <h2>dandelion</h2>
-                  </div>
-              </div>
-              <div class="row">
-                  <div class="col tech">
-                      <div class="row">
-                          <div class="col">
-                              <h3>{% t tech.dandelion1 %}</h3>
-                              <p>{% t tech.dandelion2 %}</p>
-                          </div>
-                          <div class="col">
-                              <img src="/img/dandelion.svg" alt=""/>
-                          </div>
-                      </div>
-                      <div class="row">
-                          <div class="col">
-                              <h3>{% t tech.academicpapers %}</h3>
-                              <div class="row papers">
-                                  <div class="col">
-                                      <a href="https://arxiv.org/pdf/1805.11060.pdf" alt="" class="paper-title">Dandelion++ Lightweight Cryptocurrency Networking with Formal Anonymity Guarantees (Giula Fanti et al)</a>
-                                      <p class="abstract">Dandelion++ was originally developed for Bitcoin as a way to obscure the origin of transactions by changing the way transactions propagate through the network. Dandelion++ is slated to go live on Bitcoin Core 0.18. Firo was the first project to go live with Dandelion++ on mainnet in September 2018.</p>
                                   </div>
                               </div>
                           </div>
@@ -155,7 +155,7 @@ permalink: /about/research/index.html
 
                           </div>
                           <div class="col">
-                              <img src="/img/mtp.svg" alt=""/>
+                              <img src="/img/mtp-upd.svg" alt=""/>
                           </div>
                       </div>
                       <div class="row">
