Add new team member to Research

--- a/about/team/index.html
+++ b/about/team/index.html
@@ -300,12 +300,12 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                       <div class="row">
                           <div class="col">
-                              <img src="/img/team/tigran-1.jpg" alt=""/>
+                              <img src="/img/team/Areg-Vrtanesyan.png" alt=""/>
                           </div>
                           <div class="col">
-                              <h4>{% t team.tigranmamikonyan.name %}</h4>
-                              <p class="title">{% t team.tigranmamikonyan.title %}</p>
-                              <p class="bio">{% t team.tigranmamikonyan.bio %}</p>
+                              <h4>{% t team.aregvrtanesyan.name %}</h4>
+                              <p class="title">{% t team.aregvrtanesyan.title %}</p>
+                              <p class="bio">{% t team.aregvrtanesyan.bio %}</p>
                           </div>
                       </div>
                   </div>
