update bitcoin.com to fmfwio

--- a/get-firo/buy-firo/index.html
+++ b/get-firo/buy-firo/index.html
@@ -90,7 +90,7 @@ permalink: /get-firo/buy-firo/index.html
                       <a href="https://accounts.binance.com/en/register?ref=37748947" target="_blank"><img src="/img/crypto-exchanges/binance.svg" alt=""/></a>
                   </div>
                   <div class="col">
-                      <a href="https://www.bitcoin.com/" target="_blank"><img src="/img/crypto-exchanges/bitcoin_com.svg" alt=""/></a>
+                      <a href="https://fmfw.io/" target="_blank"><img src="/img/crypto-exchanges/fmfwio.svg" alt=""/></a>
                   </div>
                   <div class="col">
                       <a href="https://www.bitforex.com/en/spot/xzc_btc" target="_blank"><img src="/img/crypto-exchanges/bitforex.svg" alt=""/></a>
