update masternode faq

--- a/about/faq/index.html
+++ b/about/faq/index.html
@@ -357,8 +357,8 @@ permalink: /about/faq/index.html
                             <label class="tab-label" for="q26"><h4>What is a masternode?</h4></label>
                             <div class="tab-content">
                                 <p>Nodes are computers that host a full copy of Firo’s blockchain and help to verify the validity of transactions.</p>
-                                <p>Masternodes are a special type of node that earn part of Firo’s block reward (currently at 30% of the block reward) in return for hosting a reliable and powerful node that helps to support the network. Masternodes require a refundable collateral of 1000 FIRO to ensure masternode holders have a stake in the coin and are incentivized to keep it working honestly, updated often and have a high uptime.</p>
-                                <p>In the future, it is intended that masternode serve as a building block for other services to be built on top of it including the delegation of Zerocoin transaction processing.</p>
+                                <p>Masternodes are a special type of node that earn part of Firo’s block reward (currently at 35% of the block reward) in return for hosting a reliable and powerful node that helps to support the network along with providing additional services to the network. For example, masternodes form themselves into long living masternode quorums (LLMQs) that provide ChainLocks which secures the chain against 51% mining attacks with single block finality and InstantSend which allows transactions to be finalized within a few seconds even before block confirmation.</p>
+                                <p>Masternodes require a refundable collateral of 1000 FIRO to ensure masternode holders have a stake in FIRO and are incentivized to keep it working honestly, updated often and have a high uptime. This collateral can be transferred out at any time without any penalty.</p>
                             </div>
                           </div>
                         </div>
