--- a/about/team/index.html
+++ b/about/team/index.html
@@ -71,18 +71,6 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                       <div class="row">
                           <div class="col">
-                              <img src="/img/team/andreybezrukov.jpg" alt=""/>
-                          </div>
-                          <div class="col">
-                              <h4>{% t team.andreybezrukov.name %}</h4>
-                              <p class="title">{% t team.andreybezrukov.title %}</p>
-                              <p class="bio">{% t team.andreybezrukov.bio %}</p>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col tmember">
-                      <div class="row">
-                          <div class="col">
                               <img src="/img/team/levon.jpg" alt=""/>
                           </div>
                           <div class="col">
@@ -107,18 +95,6 @@ permalink: /about/team/index.html
                   <div class="col tmember">
                     <div class="row">
                         <div class="col">
-                            <img src="/img/team/hermes.jpg" alt=""/>
-                        </div>
-                        <div class="col">
-                            <h4>{% t team.hermeskhachatryan.name %}</h4>
-                            <p class="title">{% t team.hermeskhachatryan.title %}</p>
-                            <p class="bio">{% t team.hermeskhachatryan.bio %}</p>
-                        </div>
-                    </div>
-                  </div>
-                  <div class="col tmember">
-                    <div class="row">
-                        <div class="col">
                             <img src="/img/team/gevorg.jpg" alt=""/>
                         </div>
                         <div class="col">
@@ -128,6 +104,30 @@ permalink: /about/team/index.html
                         </div>
                     </div>
                   </div>
+                  <div class="col tmember">
+                    <div class="row">
+                        <div class="col">
+                            <img src="/img/team/LC.jpg" alt=""/>
+                        </div>
+                        <div class="col">
+                            <h4>{% t team.lc.name %}</h4>
+                            <p class="title">{% t team.lc.title %}</p>
+                            <p class="bio">{% t team.lc.bio %}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col tmember">
+                    <div class="row">
+                        <div class="col">
+                            <img src="/img/team/levonh.jpg" alt=""/>
+                        </div>
+                        <div class="col">
+                            <h4>{% t team.levonh.name %}</h4>
+                            <p class="title">{% t team.levonh.title %}</p>
+                            <p class="bio">{% t team.levonh.bio %}</p>
+                        </div>
+                    </div>
+                </div>
               </div>
       </section>
 
