Fix broken image

--- a/about/team/index.html
+++ b/about/team/index.html
@@ -119,7 +119,7 @@ permalink: /about/team/index.html
                 <div class="col tmember">
                     <div class="row">
                         <div class="col">
-                            <img src="/img/team/levonh.jpg" alt=""/>
+                            <img src="/img/team/levonh.png" alt=""/>
                         </div>
                         <div class="col">
                             <h4>{% t team.levonh.name %}</h4>
