--- a/index.html
+++ b/index.html
@@ -82,10 +82,16 @@ permalink: /index.html
                   <img src="/img/blockchain.svg" alt="Blockchain illustration"/>
              </div>
           </div>
-          <div class="row rnd">
+          <div class="row blockchain">
              <div class="col col-img">
-                  <img src="/img/rnd.svg" alt="Blockchain illustration"/>
+                  <img src="/img/privacy-infrastructure.svg" alt="Privacy Infrastructure illustration"/>
              </div>
+             <div class="col col-info">
+                  <h3>{% t home.privacyin %}</h3>
+                  <p>{% t home.privacyin1 %}</p>
+             </div>
+          </div>
+          <div class="row rnd">
              <div class="col col-info">
                   <h3>{% t home.randd %}</h3>
                   <p>{% t home.randd1 %}</p>
@@ -104,6 +110,9 @@ permalink: /index.html
                       </div>
                   </div>
                   <a class="btn-secondary" href="{{ site.baseurl }}/about/research/">{% t home.cta2 %}</a>
+             </div>
+             <div class="col col-img">
+                  <img src="/img/rnd.svg" alt="Blockchain illustration"/>
              </div>
           </div>
           </div>
