Add Campfire wallet to Downloads page

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -204,8 +204,20 @@ permalink: /get-firo/download/index.html
                         </div>
                     </div>
                     
-                    <div class="col ghost">
+                    <div class="col">
+                        <p class="tagline">{% t download.optionmob3 %}</p>
+                        <div class="inner">
+                            <h3>{% t download.campfiremob %}</h3>
+                            <div class="system android camp">
+                                <a href="https://play.google.com/store/apps/details?id=com.cypherstack.campfire" target="_blank">{% t download.downloadmobcamp %}</a>
+                            </div>
+                            <div class="source">
+                                <a href="https://github.com/cypherstack/Campfire/releases/tag/v1.2.3" target="_blank"><i class="icon-github"></i></a>
+                                <!--a href="https://sourceforge.net/projects/firoorg/" target="_blank"><i class="icon-sourceforge"></i></a-->
+                            </div>
+                        </div>
                     </div>
+                    
               </div>
           </div>
       </section>
