Update Campfire link

--- a/get-firo/download/index.html
+++ b/get-firo/download/index.html
@@ -212,7 +212,7 @@ permalink: /get-firo/download/index.html
                                 <a href="https://play.google.com/store/apps/details?id=com.cypherstack.campfire" target="_blank">{% t download.downloadmobcamp %}</a>
                             </div>
                             <div class="source">
-                                <a href="https://github.com/cypherstack/Campfire/releases/tag/v1.2.3" target="_blank"><i class="icon-github"></i></a>
+                                <a href="https://github.com/cypherstack/Campfire/releases/latest" target="_blank"><i class="icon-github"></i></a>
                                 <!--a href="https://sourceforge.net/projects/firoorg/" target="_blank"><i class="icon-sourceforge"></i></a-->
                             </div>
                         </div>
