Update zh-cn translation

--- a/about/team/index.html
+++ b/about/team/index.html
@@ -231,9 +231,9 @@ permalink: /about/team/index.html
                         <img src="/img/team/lucas-fullam.jpg" alt=""/>
                     </div>
                     <div class="col">
-                        <h4>Lucas Fullam</h4>
-                        <p class="title">Community Manager</p>
-                        <p class="bio">Lucas Fullam has a history of working customer focused jobs in the past ranging from customer service representative to event setups at venues and conferences. He first heard about cryptocurrency back in 2012, but did not truly delve into until well into 2017 when one of his friends brought him deeper into the world of crypto where he finally got to see how much potential there was. One thing led to another and finally he found Firo and the rest is history.</p>
+                        <h4>{% t team.lucasfullam.name %}</h4>
+                        <p class="title">{% t team.lucasfullam.title %}</p>
+                        <p class="bio">{% t team.lucasfullam.bio %}</p>
                     </div>
                 </div>
             </div>                  
