Added a note on BEP20 Firo.

--- a/about/faq/index.html
+++ b/about/faq/index.html
@@ -409,7 +409,16 @@ permalink: /about/faq/index.html
                         <div class="tabs">
                           <div class="tab">
                             <input type="checkbox" id="q30">
-                            <label class="tab-label" for="q30"><h4>I have a question that is not listed here, please help!</h4></label>
+                            <label class="tab-label" for="q30"><h4>What is BEP20 Firo or Binance-Pegged Firo?</h4></label>
+                            <div class="tab-content">
+                              <p>Binance-Pegged Firo also know as BEP20 Firo is a token issued by the Binance exchange on Binance Smart Chain (BSC). It is a custodial wrapped form of Firo whereby BEP20 Firo is backed by native Firo that is custodied by Binance. The core team has no control over this token.&nbsp;</p>
+                              <p>Being a BSC token, BEP20 Firo does not utilize the privacy technology of Firo but can instead interact with defi protocol, AMM DEXes and other smart contracts on the BSC network.</p>
+                              <p>You can obtain BEP20 Firo either by withdrawing from Binance and selecting the BSC network instead of the Firo network or by swapping it on FiroDEX.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+                            </div>
+                          </div>
+						  <div class="tab">
+                            <input type="checkbox" id="q31">
+                            <label class="tab-label" for="q31"><h4>I have a question that is not listed here, please help!</h4></label>
                             <div class="tab-content">
                                 <p>Please drop by our <a href="https://discordapp.com/invite/4FjnQ2q">Discord</a> or <a href="https://t.me/firoorg">Telegram</a> to ask any questions!</p>
                             </div>
