Updated completed roadmap items
Added Spats, Avalanche, Elysium v2 to research.

--- a/about/roadmap/index.html
+++ b/about/roadmap/index.html
@@ -22,7 +22,7 @@ permalink: /about/roadmap/index.html
                   <div class="col">
                           <ul class="timeline">
                             <li class="event done">
-                              <h3>{% t roadmap.znodes %}</h3>
+                              <h3>{% t roadmap.mnodes %}</h3>
                             </li>
                             <li class="event done">
                               <h3>{% t roadmap.mnodesq %}</h3>   
@@ -43,12 +43,20 @@ permalink: /about/roadmap/index.html
                               <p>{% t roadmap.rapdesc %}</p>
                             </li>
                             <li class="event done">
-                              <h3>{% t roadmap.progpow %}</h3>   
-                              <p>{% t roadmap.progpowdesc %}</p>
+                              <h3>{% t roadmap.firopow %}</h3>   
+                              <p>{% t roadmap.firopowdesc %}</p>
                             </li>
                             <li class="event done">
                               <h3>{% t roadmap.instant %}</h3>
                               <p>{% t roadmap.instantdesc %}</p>
+                            </li>
+						    <li class="event done">
+                              <h3>{% t roadmap.firodex %}</h3>
+                              <p>{% t roadmap.firodexdesc %}</p>
+                            </li>
+							<li class="event done">
+                              <h3>{% t roadmap.mobile %}</h3>
+                              <p>{% t roadmap.mobiledesc %}</p>
                             </li>
                             <li class="event current">
                               <h3>{% t roadmap.elysium %}</h3>
@@ -57,15 +65,6 @@ permalink: /about/roadmap/index.html
                             <li class="event current">
                               <h3>{% t roadmap.lelantusspark %}</h3>
                               <p>{% t roadmap.lelantussparkdesc %}</p>
-                            </li>
-                            <li class="event current">
-                              <h3>{% t roadmap.mobile %}</h3>
-                              <p>{% t roadmap.mobiledesc %}</p>
-                            </li>
-
-                            <li class="event current">
-                              <h3>{% t roadmap.atomicdex %}</h3>
-                              <p>{% t roadmap.atomicdexdesc %}</p>
                             </li>
                           </ul>
                   </div>
@@ -83,9 +82,17 @@ permalink: /about/roadmap/index.html
               <div class="row">
                   <div class="col">
                           <ul class="timeline">
-                            <li class="event">
+                            <li class="event done">
                               <h3>{% t roadmap.lelantussparkaddress %}</h3>
                               <p>{% t roadmap.lelantussparkaddressdesc %}</p>
+                            </li>
+							<li class="event done">
+                              <h3>{% t roadmap.spats %}</h3>
+                              <p>{% t roadmap.spatsdesc %}</p>
+                            </li>
+							<li class="event current">
+                              <h3>{% t roadmap.aura %}</h3>
+                              <p>{% t roadmap.auradesc %}</p>
                             </li>
                             <li class="event">
                               <h3>{% t roadmap.syncclients %}</h3>
@@ -98,6 +105,14 @@ permalink: /about/roadmap/index.html
                             <li class="event">
                               <h3>{% t roadmap.bridges %}</h3>
                               <p>{% t roadmap.bridgesdesc %}</p>
+                            </li>
+                            <li class="event">
+                              <h3>{% t roadmap.avalanche %}</h3>
+                              <p>{% t roadmap.avalanchedesc %}</p>
+                            </li>
+							<li class="event">
+                              <h3>{% t roadmap.elysiumv2 %}</h3>
+                              <p>{% t roadmap.elysiumv2desc %}</p>
                             </li>
                           </ul>
                   </div>
